--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,9 @@ hr{
 
 
 .technology_img{
-	width: 30%;
+	width: 16%;
 	position:absolute;
-	width:16%;
-	margin-left: 20%;
+	margin-left: 260px;
 }
 #info{
 	color: #40514E;
